--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,8 +1,24 @@
 /* Custom styles */
 body {
-    background-color: #0a0a21;
+    background-color: #192033;
 }
 
 h1 {
-    color: #bed4e3;
+    color: #c1c6cc;
+}
+
+h2 {
+    color: #c1c6cc;
+}
+
+h3 {
+    color: #c1c6cc;
+}
+
+h4 {
+    color: #c1c6cc;
+}
+
+p {
+    color: #c1c6cc;
 }
