--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -9,11 +9,11 @@ body {
 }
 
 a {
-    color: #f1ece3;
+    color: #f8f8f8;
 }
 
 h1 {
-    color: #f1ece3;
+    color: #f8f8f8;
 }
 
 h2 {
@@ -29,7 +29,7 @@ h4 {
 }
 
 p {
-    color: #f1ece3 !important;
+    color: #f8f8f8 !important;
 }
 
 footer {
