Univariate and Bivariate Analysis

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -17,15 +17,15 @@ h1 {
 }
 
 h2 {
-    color: #f1ece3;
+    color: #f8f8f8;
 }
 
 h3 {
-    color: #f1ece3;
+    color: #f8f8f8;
 }
 
 h4 {
-    color: #f1ece3;
+    color: #f8f8f8;
 }
 
 p {
@@ -37,5 +37,5 @@ footer {
 }
 
 footer a {
-    color: #f1ece3;
+    color: #f8f8f8;
 }
