--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -23,19 +23,24 @@ h1 {
 
 h2 {
     color: #f8f8f8;
+    margin-top: 2em;
 }
 
 h3 {
     color: #f8f8f8;
+    margin-top: 1.75rem;
 }
 
 h4 {
     color: #f8f8f8;
+    margin-top: 1.5rem;
 }
 
 p {
     color: #f8f8f8 !important;
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 ul li {
